--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -1,4 +1,8 @@
 page-chat {
+  .thumb-img {
+    padding: 10px;
+}
+
     ion-content {
         background: url(../assets/imgs/bg.png) no-repeat center center fixed;
         background-size: cover;
