--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,3 +1,10 @@
 page-profile {
-
+    .has-header{
+        background-image: url('../assets/imgs/bg.png');
+            width: 100%;
+            background-size: 100% 100%;
+            background-repeat: no-repeat;
+            background-position: center center;
+            background-size: cover;
+      }
 }
