--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -61,6 +61,7 @@ page-chat {
           }
           span.msg-date {
             font-size: 10px;
+            
           }
         }
     
@@ -93,6 +94,7 @@ page-chat {
           }
           span.msg-date {
             font-size: 10px;
+            float:right;
           }
         }
     
