--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -10,4 +10,9 @@ page-contact {
         color: #999;
         margin-left: 8px;
     }
+
+    .segment-md .segment-button.activated, .segment-md .segment-button.segment-activated {
+        border-color: white;
+        opacity: 1;
+    }
 }
