--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -4,7 +4,8 @@ page-chat {
 }
 
     ion-content {
-        background: url(../assets/imgs/bg.png) no-repeat center center fixed;
+        background-color: #ccd2ea;
+       //background-image: url('imgs/chat_bg.png');
         background-size: cover;
         height: 100%;
         overflow: hidden;
@@ -17,32 +18,32 @@ page-chat {
         ion-icon {
           padding: 10px;
           font-size: 20px;
-          color: green;
+          color: black;
         }
       }
-      .chat-status {
-        min-height: 49px;
-        .chat-date {
-          display: block;
-          font-size: 10px;
-          font-style: italic;
-          color: #fff;
-          text-shadow: 0px -1px 0px #222, 0px 1px 0px #aaa;
-          height: 15px;
-          left: 10%;
-          right:10%;
-        }
-        .chat-content-center {
-          padding: 5px 10px;
-          background-color: #e1e1f7;
-          border-radius: 6px;
-          font-size: 12px;
-          color: #555;
-          height: 34px;
-          left: 10%;
-          right:10%;
-        }
-      }
+      // .chat-status {
+      //   min-height: 49px;
+      //   .chat-date {
+      //     display: block;
+      //     font-size: 10px;
+      //     font-style: italic;
+      //     color: #fff;
+      //     text-shadow: 0px -1px 0px #222, 0px 1px 0px #aaa;
+      //     height: 15px;
+      //     left: 10%;
+      //     right:10%;
+      //   }
+      //   .chat-content-center {
+      //     padding: 5px 10px;
+      //     background-color: #e1e1f7;
+      //     border-radius: 6px;
+      //     font-size: 12px;
+      //     color: #555;
+      //     height: 34px;
+      //     left: 10%;
+      //     right:10%;
+      //   }
+      // }
       .chat-message {
         width: 80%;
         min-height: 40px;
@@ -81,7 +82,7 @@ page-chat {
         }
         .left-bubble {
             position: relative;
-            background: #ffffff;
+            background: black;
           border-top-right-radius: .4em;
           border-bottom-left-radius: .4em;
           border-bottom-right-radius: .4em;
@@ -90,7 +91,7 @@ page-chat {
           span.msg-name {
             font-size: 12px;
             font-weight: bold;
-            color: blue;
+            color: white;
           }
           span.msg-date {
             font-size: 10px;
@@ -106,7 +107,7 @@ page-chat {
             width: 0;
             height: 0;
             border: 27px solid transparent;
-            border-right-color: #ffffff;
+            border-right-color: black;
             border-left: 0;
             border-top: 0;
             margin-top: -13.5px;
