--- a/src/pages/editprofile/editprofile.scss
+++ b/src/pages/editprofile/editprofile.scss
@@ -1,3 +1,8 @@
 page-editprofile {
-
+    ion-avatar,
+    ion-avatar > img{
+        border-radius:50%;
+        height:12rem;
+        width:12rem;
+    }
 }
