--- a/src/pages/editprofile/editprofile.scss
+++ b/src/pages/editprofile/editprofile.scss
@@ -1,8 +1,7 @@
 page-editprofile {
-    ion-avatar,
-    ion-avatar > img{
+    img{
         border-radius:50%;
-        height:12rem;
+        height:11rem;
         width:12rem;
     }
 }
