--- a/src/app/app.html
+++ b/src/app/app.html
@@ -12,7 +12,7 @@
           <!-- <p style="color:grey;padding-left:40px;font-size:1.2em" (click)="OnLoad(listing)"><b>My Listings</b></p> -->
         <p style="color:grey;padding-left:40px;font-size:1.2em" (click)="OnLoad(home)"><b>Home</b></p>
         <p style="color:grey;padding-left:40px;font-size:1.2em;padding-top:16px" (click)="OnLoad(chatgroup)"><b>VIP Rooms</b></p>   <!-- (click)="OnLoad(profile)" -->
-        <p style="color:grey;padding-left:40px;font-size:1.2em;padding-top:16px" (click)="OnLoad(tips)"><b>Tipster Profile</b></p>
+        <p style="color:grey;padding-left:40px;font-size:1.2em;padding-top:16px" (click)="OnLoad(tips)"><b>Expert Profiles</b></p>
         <p style="color:grey;padding-left:40px;font-size:1.2em;padding-top:16px" (click)="OnLoad(event)"><b>Events</b></p>
         <p style="color:grey;padding-left:40px;font-size:1.2em;padding-top:16px" (click)="OnLoad(faq)"><b>FAQ</b></p>
         <p style="color:grey;padding-left:40px;font-size:1.2em;padding-top:16px" (click)="OnLoad(contact)"><b>Contact Us</b></p>
