--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -39,8 +39,8 @@ page-home {
         float: left;
       }
       body {
-        background: #F0EFED;
-        background-image: linear-gradient(to bottom, #E5E4E5, #C2C1C2);
+       // background: #F0EFED;
+        //background-image: linear-gradient(to bottom, #E5E4E5, #C2C1C2);
         font-family: 'ProximaNova-Regular', Helvetica neue, sans-serif;
       }
       #posts {
@@ -58,7 +58,7 @@ page-home {
         position: absolute;
         width: 100%;
         height: 30%;
-        background: #fff;
+        background: transparent;
         z-index: 1;
         box-shadow: 0 0 5px rgba(black, 0);
         &_visual {
@@ -164,7 +164,7 @@ page-home {
           }
         }
         &_user-stats {
-          background: #fff;
+          background: transparent;
           float: left;
           width: 100%;
           height: $datas-height;
@@ -227,5 +227,14 @@ page-home {
         border-bottom: 4px solid; 
         border-left: 4px solid;
         border-right: 4px solid; 
+      }
+
+      .has-header{
+        background-image: url('../assets/imgs/bg.png');
+        width: 100%;
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
       }
 }
