--- a/src/app/app.html
+++ b/src/app/app.html
@@ -16,8 +16,7 @@
         <p style="color:grey;padding-left:40px;font-size:1.2em;padding-top:16px" (click)="OnLoad(event)"><b>Events</b></p>
         <p style="color:grey;padding-left:40px;font-size:1.2em;padding-top:16px" (click)="OnLoad(faq)"><b>FAQ</b></p>
         <p style="color:grey;padding-left:40px;font-size:1.2em;padding-top:16px" (click)="OnLoad(contact)"><b>Contact Us</b></p>
-        <p style="color:grey;padding-left:40px;font-size:1.2em;padding-top:16px" (click)="OnLoad(bookie)"><b>Bookie Offer</b></p>
-        
+        <p style="color:grey;padding-left:40px;font-size:1.2em;padding-top:16px" (click)="OnLoad(member)"><b>Member Terms</b></p>
       </div>
   
     </ion-content>
