--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -201,12 +201,12 @@ page-home {
 
       .change-color
       {
-        border-radius: 12px 12px;
-        border-top-color:#f4f4f4 !important;
-        border-bottom-color:#f4f4f4 !important;
-        border-right-color:#f4f4f4 !important;
-        border-left-color:#f4f4f4 !important;
-        border-radius:12px 12px;
+        border-radius: 188px 188px;
+        background-color:white;
+        border-top-color:lightgrey !important;
+        border-bottom-color:lightgrey !important;
+        border-right-color:lightgrey !important;
+        border-left-color:lightgrey !important;
         border-top: 2px solid;
         border-bottom: 2px solid; 
         border-left: 2px solid;
@@ -217,16 +217,16 @@ page-home {
     //onclick change bg
       .highlight
       {
-        border-radius: 12px 12px;
-        border-top-color:#f33b7a !important;
-        border-bottom-color:#f33b7a !important;
-        border-right-color:#f33b7a !important;
-        border-left-color:#f33b7a !important;
-        border-radius:12px 12px;
-        border-top: 4px solid;
-        border-bottom: 4px solid; 
-        border-left: 4px solid;
-        border-right: 4px solid; 
+        border-radius: 188px 188px;
+        background-color:white;
+        border-top-color:#AF8700 !important;
+        border-bottom-color:#AF8700 !important;
+        border-right-color:#AF8700 !important;
+        border-left-color:#AF8700 !important;
+        border-top: 2px solid;
+        border-bottom: 2px solid; 
+        border-left: 2px solid;
+        border-right: 2px solid;
       }
 
       .has-header{
